Ensure video covers the entire container by setting `object-fit`.

--- a/app/components/YTMPlayer/YTMPlayer.module.scss
+++ b/app/components/YTMPlayer/YTMPlayer.module.scss
@@ -18,6 +18,7 @@
   .albumImage {
     width: 75px;
     height: 75px;
+    object-fit: cover;
   }
 
   .infoContainer {
